{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 63,
  "lineage": "61d25ff5-0748-fb9c-4926-ea46e3322642",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:779860661651:instance/i-0929cd5893d01fb6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0929cd5893d01fb6a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f13cb98761817f1",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_ip": "10.0.1.108",
            "public_ip": "44.192.119.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c047fa6dd4d7ca6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0330f49a136f41566",
            "tags": {
              "Name": "nginx_sever"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07c537f7f8e7ba6cb"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.private_security_group",
            "module.iti.aws_subnet.public1",
            "module.iti.aws_vpc.iti",
            "tls_private_key.key_pair_gen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:779860661651:instance/i-09e841b4bc0937353",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e841b4bc0937353",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e01394f1a6d0adc",
            "private_dns": "ip-10-0-1-162.ec2.internal",
            "private_ip": "10.0.1.162",
            "public_ip": "3.210.185.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd601d95b13568fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0330f49a136f41566",
            "tags": {
              "Name": "bastion_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00fa8e43df3a6763c"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.public_security_group",
            "module.iti.aws_subnet.public1",
            "module.iti.aws_vpc.iti",
            "tls_private_key.key_pair_gen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-07c537f7f8e7ba6cb",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c537f7f8e7ba6cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh from my machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "to Web",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:security-group/sg-00fa8e43df3a6763c",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fa8e43df3a6763c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh from my machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "779860661651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:internet-gateway/igw-01d69bc5c5b467ce1",
            "id": "igw-01d69bc5c5b467ce1",
            "owner_id": "779860661651",
            "tags": {
              "Name": "dev"
            },
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d69bc5c5b467ce1",
            "id": "r-rtb-013ba9118e16f17b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013ba9118e16f17b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iti.aws_internet_gateway.iti",
            "module.iti.aws_route_table.private",
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d69bc5c5b467ce1",
            "id": "r-rtb-0e3e1bf5b85db20e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3e1bf5b85db20e4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iti.aws_internet_gateway.iti",
            "module.iti.aws_route_table.public",
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:route-table/rtb-013ba9118e16f17b9",
            "id": "rtb-013ba9118e16f17b9",
            "owner_id": "779860661651",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:route-table/rtb-0e3e1bf5b85db20e4",
            "id": "rtb-0e3e1bf5b85db20e4",
            "owner_id": "779860661651",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aeadf39ca50bb17",
            "route_table_id": "rtb-013ba9118e16f17b9",
            "subnet_id": "subnet-011afbfce9090a6e8"
          },
          "dependencies": [
            "module.iti.aws_route_table.private",
            "module.iti.aws_subnet.private1",
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013dccbd6cbabe40b",
            "route_table_id": "rtb-013ba9118e16f17b9",
            "subnet_id": "subnet-0d6ab6ecdaf0078ef"
          },
          "dependencies": [
            "module.iti.aws_route_table.private",
            "module.iti.aws_subnet.private2",
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e68287d5ad021fe0",
            "route_table_id": "rtb-0e3e1bf5b85db20e4",
            "subnet_id": "subnet-0330f49a136f41566"
          },
          "dependencies": [
            "module.iti.aws_route_table.public",
            "module.iti.aws_subnet.public1",
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ee737abcfbc899",
            "route_table_id": "rtb-0e3e1bf5b85db20e4",
            "subnet_id": "subnet-077ca41d82af6513b"
          },
          "dependencies": [
            "module.iti.aws_route_table.public",
            "module.iti.aws_subnet.public2",
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-011afbfce9090a6e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-011afbfce9090a6e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779860661651",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-0d6ab6ecdaf0078ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d6ab6ecdaf0078ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779860661651",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-0330f49a136f41566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0330f49a136f41566",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779860661651",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:subnet/subnet-077ca41d82af6513b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-077ca41d82af6513b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779860661651",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-08a8d0b4d06fd8687"
          },
          "dependencies": [
            "module.iti.aws_vpc.iti"
          ]
        }
      ]
    },
    {
      "module": "module.iti",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779860661651:vpc/vpc-08a8d0b4d06fd8687",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf6f052ae7738f0a",
            "default_route_table_id": "rtb-01ce507468d5d9293",
            "default_security_group_id": "sg-07f38e06aa6c58b2b",
            "dhcp_options_id": "dopt-6b85a311",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a8d0b4d06fd8687",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01ce507468d5d9293",
            "owner_id": "779860661651",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}